--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
+altair==5.4.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asgiref==3.8.1
@@ -8,6 +9,7 @@ attrs==24.2.0
 backoff==2.2.1
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
+blinker==1.9.0
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
@@ -31,6 +33,8 @@ filetype==1.2.0
 flatbuffers==24.3.25
 frozenlist==1.5.0
 fsspec==2024.10.0
+gitdb==4.0.11
+GitPython==3.1.43
 google-auth==2.36.0
 googleapis-common-protos==1.65.0
 grpcio==1.67.1
@@ -44,11 +48,14 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+Jinja2==3.1.4
 jiter==0.7.0
 joblib==1.4.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 kubernetes==31.0.0
 langchain==0.3.7
 langchain-community==0.3.7
@@ -60,6 +67,7 @@ langsmith==0.1.142
 lxml==5.3.0
 Markdown==3.7
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 marshmallow==3.23.1
 mdurl==0.1.2
 mmh3==5.0.1
@@ -67,6 +75,7 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+narwhals==1.14.1
 nest-asyncio==1.6.0
 nltk==3.9.1
 numpy==1.26.4
@@ -86,15 +95,19 @@ opentelemetry-util-http==0.49b1
 orjson==3.10.11
 overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
 posthog==3.7.0
 propcache==0.2.0
 protobuf==5.28.3
+pyarrow==18.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.6.1
 pydantic_core==2.23.4
+pydeck==0.9.1
 Pygments==2.18.0
 pypdf==5.1.0
 PyPika==0.48.9
@@ -103,34 +116,43 @@ python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-iso639==2024.10.22
 python-magic==0.4.27
+pytz==2024.2
 PyYAML==6.0.2
 RapidFuzz==3.10.1
+referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
+rpds-py==0.21.0
 rsa==4.9
 shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.35
 starlette==0.41.2
+streamlit==1.40.1
 sympy==1.13.3
 tabulate==0.9.0
 tenacity==9.0.0
 tiktoken==0.8.0
 tokenizers==0.20.3
+toml==0.10.2
+tornado==6.4.1
 tqdm==4.67.0
 typer==0.13.0
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.2
 unstructured==0.11.8
 unstructured-client==0.27.0
 urllib3==2.2.3
 uvicorn==0.32.0
 uvloop==0.21.0
+watchdog==6.0.0
 watchfiles==0.24.0
 websocket-client==1.8.0
 websockets==14.0
